--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "chart.js": "^4.5.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "csv-parser": "^3.2.0",
     "formidable": "^3.5.4",
     "ibm_db": "^3.3.4",
@@ -15,6 +17,7 @@
     "next": "15.5.4",
     "node-fetch": "^3.3.2",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
